--- a/projects/ld69/game.html
+++ b/projects/ld69/game.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Colonies</title>
+    <title>:isation</title>
     <meta name="description" content="">
     <!-- This assumes your project will be responsive -->
     <meta name="viewport" content="width=device-width">
@@ -38,10 +38,11 @@
         <div id="message" class="message"></div>
     </div>
 
-    </div>
-
     <div id="world"></div>
 
+    <div class="game_info level">
+        <div id="info">I love 猫</div>
+    </div>
 
     <script data-main="js/main" src="js/vendor/require.js"></script>
 </body>
